--- a/partials/_typography.scss
+++ b/partials/_typography.scss
@@ -73,7 +73,7 @@ nav[role=navigation]{
 }
 
 header{
-  font-size: 2em;
+  font-size: 1.5rem;
 }
 
 aside{
