--- a/style.scss
+++ b/style.scss
@@ -313,10 +313,10 @@ aside::after {
     position: absolute;
     opacity: 1;
     z-index: -1;
-    left: 5%;
+    right: 5%;
     bottom: 3%;
-    height: 200px;
-    width: 200px;
+    height: 125px;
+    width: 125px;
     border: 5px solid $shield-border-color;
     border-radius: 50% 50% 50% 50% / 12% 12% 88% 88%;
     background-image: linear-gradient(transparent 35%,
@@ -360,13 +360,14 @@ aside h3 {
 }
 
 aside>.wrapper {
-    text-align: right;
+    text-align: left;
     width: 90%;
     padding: 0 2%;
 
     @include MQ(M) {
         width: 100%;
         padding: 0;
+        text-align: right;
     }
 }
 
@@ -395,6 +396,11 @@ aside li {
 
 #design-archives {
     margin-bottom: 25px;
+}
+
+#design-archives h3,
+#zen-resources h3{
+    margin-bottom: 5px;
 }
 
 footer {
